--- a/scss/components/landing-sales/_landing-module-19.scss
+++ b/scss/components/landing-sales/_landing-module-19.scss
@@ -2,6 +2,8 @@
   .ribbon {
     font-size: 33px;
     padding: .5em 0;
+    @include montserrat();
+    font-weight: 600;
   }
 
   @include media-breakpoint-down(lg) {  
