--- a/scss/components/_page-sales.scss
+++ b/scss/components/_page-sales.scss
@@ -11,6 +11,15 @@
     font-size: 15px;
   }
 
+  p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+  }
+
+  p strong {
+    font-weight: 500;
+  }
+
   background: #000 url("../img/landing-sales/bg-landing-page-sales.jpg") 0 0
     no-repeat;
   background-size: contain;
@@ -26,11 +35,12 @@
 
   .header {
     position: absolute;
-    top: 90px;
     left: 0;
+    top: 0;
+    
 
     .navbar-brand img {
-      width: 390px;
+      width: 300px;
       height: auto;
     }
   }
@@ -44,6 +54,11 @@
   }
 
   @media screen and (min-width: 1200px) {
+
+    .header 
+    {
+      padding: 76px 70px 0;
+    }
     .content-top {
       margin-bottom: 0;
       position: relative;
@@ -121,9 +136,10 @@
       font-size: 24px;
     }
 
-    strong em {
+    em {
       color: $sherpa-secondary-color;
       font-style: normal;
+      font-weight: 600;
     }
 
     p {
@@ -131,11 +147,16 @@
       font-weight: 300;
     }
 
+    strong {
+      font-weight: 600;
+    }
+
     text-align: center;
   }
 
   .ribbon.ribbon-black {
     background: #000;
+    padding: 2.5em 0;
 
     span {
       color: #25971b;
@@ -149,6 +170,7 @@
   .internal-banner {
     margin-top: 2em;
   }
+
 
   @import "landing-sales/landing-module-1";
   @import "landing-sales/landing-module-2";
