--- a/scss/components/landing-sales/_landing-module-13.scss
+++ b/scss/components/landing-sales/_landing-module-13.scss
@@ -21,7 +21,7 @@
     }
 
   h2 {
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: .5em;
   } 
 
@@ -50,16 +50,29 @@
     }
   }
 
+  strong {
+    color: $black;
+  }
+
   .dark-gray h2 {
-    font-size: 32px;
+    font-size: 27px;
+    letter-spacing: 1px;
   }
 
   p {
-    font-size: 18px;
+    font-size: 20px;
+    margin-bottom: 1.95em;
+
+    .red {
+      color: red;
+    }
   }
 
   p.blurb {
-    font-size: 22px;
+    font-size: 33px;
+    margin-bottom: 0;
+    line-height: 1.5;
+    margin-top: .5em;
   }
 
   .container {
