--- a/scss/components/landing-sales/_landing-module-15.scss
+++ b/scss/components/landing-sales/_landing-module-15.scss
@@ -5,6 +5,11 @@
     margin-bottom: 2em;
   }
 
+  p {
+     font-weight: 500;
+     color: $black;
+  }
+
   @include media-breakpoint-down(lg) {  
     padding: 2em 15px;
   
