--- a/scss/components/landing-sales/_landing-module-24.scss
+++ b/scss/components/landing-sales/_landing-module-24.scss
@@ -2,11 +2,11 @@
   background: url("../img/landing-sales/bg-social.jpg") 0 0 no-repeat;
   background-size: cover;
   color: $white;
-  padding: 169px 0 0;
+  padding: 6.5em 0 0;
   font-size: 19px;
 
   ul.check-list li {
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 
     &::before {
       width: 20px;
@@ -20,6 +20,7 @@
     margin: 0 30px;
     position: relative;
     @include nodropshadow();
+
 
     &::before {
     content: "";
@@ -72,13 +73,17 @@
   
 
   p.blurb {
+    font-size: 28px;
     font-weight: 600;
+    color: $white;
+    line-height: 2;
   }
 
   .list-inline {
     list-style: none;
     display: flex;
     justify-content: center;
+    margin-top: 2em;
 
     li {
       font-size: 33px;
@@ -103,6 +108,10 @@
   .social-tab {
 
     @include dropshadow();
+
+    p.blurb {
+      color: $black;
+    }
 
     .icon {
       position: absolute;
@@ -174,6 +183,10 @@
     p.blurb {
       font-size: 33px;
       font-weight: 600;
+      margin-top: 0;
+      line-height: 1;
+      margin-bottom: 1em;
+
       strong {
         color: $sherpa-secondary-color;
         font-weight: 600;
@@ -189,7 +202,7 @@
       background: $sherpa-brand-primary;
       color: $white;
       display: block;
-      padding: 0.5em;
+      padding: 1em 0.5em 0.5em;
       font-family: "Oswald", sans-serif;
       font-size: 80px;
       margin-bottom: 0;
@@ -199,10 +212,8 @@
     color: $black;
 
     .extra-padding {
-      padding: 3em 5em;
+      padding: 3.5em 2em;
     }
-
-    
   }
 
   @media screen and (min-width: 1200px) {
@@ -211,6 +222,7 @@
 
     .display-col {
        margin-top: 0;
+       padding-bottom: 4em;
     }
 
     .social-tab.sideways {
@@ -220,6 +232,12 @@
       text-align: left;
       margin: 2em auto;
       position: relative;
+      justify-content: center;
+      align-items: center;
+
+      .extra-padding {
+        padding: 0 5em;
+      }
 
       p {
         margin-bottom: 0;
@@ -228,7 +246,9 @@
       h2 {
         text-transform: uppercase;
         margin-bottom: 0;
-        padding-left: 90px;
+        text-align: center;
+        padding: 1.25em 0 1.25em 0;
+        width: 480px;
       }
 
       .icon {
@@ -241,6 +261,7 @@
 
   .check-list {
     text-align: left;
+    padding-left: 2em;
   }
 
   @include media-breakpoint-down(lg) {
