--- a/scss/components/landing-sales/_landing-module-25.scss
+++ b/scss/components/landing-sales/_landing-module-25.scss
@@ -34,11 +34,13 @@
     display: flex;
     justify-content: center;
     border-top: 1px solid #cbcbcb;
+    padding-top: 1.5em;
 
     li {
       padding-top: 2em;
-      padding-left: 6em;
-      padding-right: 6em;
+      padding-left: 2em;
+      padding-right: 2em;
+      font-size: 20px;
 
       &::before {
         content: "";
