--- a/scss/components/landing-sales/_landing-module-26.scss
+++ b/scss/components/landing-sales/_landing-module-26.scss
@@ -2,16 +2,28 @@
   .black {
     background: #000;
     color: $white;
-    padding: 4em;
-  }
+    padding: 6.5em 0;
 
-  p {
-    font-size: 33px;
+     p {
+      font-size: 33px;
+    }
   }
+    
+
+    p {
+      font-size: 36px;
+    }
+ 
 
   .yellow {
     background: none;
     color: #eee30c;
+    font-style:  italic;
+    font-weight: 600;
+  }
+
+  p.blurb {
+    margin-top: 1em;
   }
 
   .gray {
@@ -20,6 +32,9 @@
 
     p {
       line-height: 1.25;
+      @include montserrat();
+      font-weight: 600;
+      margin-bottom: 0;
     }
   }
 
