--- a/scss/components/landing-sales/_landing-module-28.scss
+++ b/scss/components/landing-sales/_landing-module-28.scss
@@ -1,10 +1,10 @@
 .landing-module-28 {
   .extra-padding {
-    padding: 4em;
+    padding: 5em;
   }
 
   .yellow {
-    padding: 4em 0;
+    padding: 0em 0;
   }
 
   p {
@@ -13,6 +13,8 @@
 
   p.blurb {
     font-size: 30px;
+    color: $black;
+    @include montserrat();
   }
 
   strong {
@@ -21,6 +23,11 @@
 
   .red {
     color: red;
+    font-weight: 600;
+  }
+
+  .btn {
+    margin-top: 3em;
   }
 
   @include media-breakpoint-down(lg) {
