--- a/scss/components/landing-sales/_landing-module-5.scss
+++ b/scss/components/landing-sales/_landing-module-5.scss
@@ -11,6 +11,9 @@
     font-style: italic;
     font-weight: 300;
     line-height: 1.5;
+    font-size: 30px;
+    @include montserrat();
+    letter-spacing: 1px;
   }
 
   img {
