--- a/scss/components/landing-sales/_landing-module-14.scss
+++ b/scss/components/landing-sales/_landing-module-14.scss
@@ -1,6 +1,10 @@
 .landing-module-14 {
   .landing-text-box {
     padding: 4em 0;
+
+    .extra-padding {
+      padding: 2em 0;
+    }
   }
 
   p {
