--- a/scss/components/landing-sales/_landing-module-20.scss
+++ b/scss/components/landing-sales/_landing-module-20.scss
@@ -112,6 +112,11 @@
       }
     }
 
+    .dark-gray {
+      justify-content: center;
+      width: 100%;
+    }
+
     .row .col {
       .extra-padding {
         padding: 2em 15px;
