--- a/scss/components/landing-sales/_landing-module-21.scss
+++ b/scss/components/landing-sales/_landing-module-21.scss
@@ -12,6 +12,17 @@
       background: $white;
     }
   
+  h2 {
+    margin-bottom: 1.5em;
+  }
+
+  h2.blurb {
+    margin-bottom: 1em;
+  }
+
+  p {
+    margin-bottom: 1em;
+  }
 
   
 
