--- a/scss/components/landing-sales/_landing-module-26.scss
+++ b/scss/components/landing-sales/_landing-module-26.scss
@@ -57,6 +57,7 @@
 
     }
 
+
     h1 {
       @include mobile-heading();
     }
@@ -66,7 +67,7 @@
     }
 
     p.blurb {
-      margin-bottom: 2em;
+      margin-bottom: 0;
     }
   }
 }
