--- a/scss/components/_page-sales.scss
+++ b/scss/components/_page-sales.scss
@@ -17,13 +17,14 @@
   }
 
   p strong {
-    font-weight: 500;
+    font-weight: 600;
   }
 
   background: #000 url("../img/landing-sales/bg-landing-page-sales.jpg") 0 0
     no-repeat;
   background-size: contain;
   font-family: "Roboto", sans-serif;
+  color: #000;
 
   p.blurb {
     @include montserrat();
@@ -164,7 +165,7 @@
   }
 
   .landing-text-box {
-    padding: 5em 0;
+    padding: 6.5em 0;
   }
 
   .internal-banner {
