--- a/scss/components/landing-sales/_landing-module-8.scss
+++ b/scss/components/landing-sales/_landing-module-8.scss
@@ -4,10 +4,24 @@
   background-size: cover;
   text-align: left;
   color: $white;
+  position: relative;
+
+  @include icon-swirly();
+
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    left: 37%;
+    top: -10px;
+  }
  
 
   img {
     flex: 1;
+    margin: 2em 0;
   }
 
   p {
@@ -65,6 +79,14 @@
   @include media-breakpoint-down(lg) {
     text-align: center;
     padding: 2em 0 0;
+
+    img {
+      margin: 0 auto;
+    }
+
+    &::before {
+      display: none;
+    }
 
     h2 {
       text-align: center;
