--- a/scss/components/landing-sales/_landing-module-13.scss
+++ b/scss/components/landing-sales/_landing-module-13.scss
@@ -102,7 +102,7 @@
 @include media-breakpoint-down(lg) {  
 
   .dark-gray .extra-padding, .gray .extra-padding {
-    padding: 0 15px;
+    padding: 2em 15px;
   }
 
   .img-asap {
