--- a/scss/components/landing-sales/_landing-module-16.scss
+++ b/scss/components/landing-sales/_landing-module-16.scss
@@ -49,6 +49,11 @@
 
   @include media-breakpoint-down(lg) {  
 
+    .black {
+      padding: 2em 15px;
+
+    
+    }
 
     .yellow {
       padding: 2em 30px;
