--- a/scss/components/landing-sales/_landing-module-25.scss
+++ b/scss/components/landing-sales/_landing-module-25.scss
@@ -59,6 +59,10 @@
 
     .list-inline {
       flex-direction: column;
+
+      li {
+        font-size: 15px;
+      }
     }
    
     .content-top {
