--- a/scss/components/_page-sales.scss
+++ b/scss/components/_page-sales.scss
@@ -243,6 +243,11 @@
       top: 50px;
     }
 
+    .ribbon.ribbon-black p {
+      font-size: 20px;
+    }
+    
+
     #header-logo {
       margin-left: 15px;
     }
@@ -268,8 +273,12 @@
     }
 
     .extra-padding {
-      padding-left: 15px;
-      padding-right: 15px;
+      padding: 0 15px;
+
+      p {
+        margin-left: 15px;
+        margin-right: 15px;
+      }
     }
 
     ul.checks {
@@ -290,8 +299,13 @@
 
       .col {
         flex: 1;
-        padding: 2em 15px;
+        padding: 0 15px;
       }
+    }
+
+    .map {
+      margin-top: 1em;
+      flex: 200px !important;
     }
 
     p {
