--- a/scss/components/landing-sales/_landing-module-2.scss
+++ b/scss/components/landing-sales/_landing-module-2.scss
@@ -19,9 +19,12 @@
     font-size: 26px;
     font-weight: 500;
   }
+  
 
-  .extra-padding {
-    padding: 114px;
+  @media screen and (min-width: 1500px) {
+    .extra-padding {
+      padding: 114px;
+    }
   }
 
   p {
@@ -40,10 +43,16 @@
     }
   }
 
+  .extra-padding {
+    padding: 4em 15px;
+  }
   
 
   @include media-breakpoint-down(lg) {
-    .extra-padding {
+
+     margin-top: 1em;
+    
+    .extra-padding { 
       padding: 2em 15px;
     }
 
