--- a/scss/components/landing-sales/_landing-module-21.scss
+++ b/scss/components/landing-sales/_landing-module-21.scss
@@ -41,8 +41,9 @@
       content: '';
       position: absolute;
       left: 15%;
-      top: 20px;
-      background: url('../img/landing-sales/bg-finger.png') center 0 no-repeat;
+      top: auto;
+      bottom: -20px;
+      background: url('../img/landing-sales/bg-finger2.png') center 100% no-repeat;
       width: 50vw;
       height: 100%;
       display: block;
@@ -76,7 +77,7 @@
 
 
     .extra-padding {
-      padding: 0 0 2em;
+      padding: 2em 15px;
     }
 
     .bg-ppc {
