--- a/scss/components/landing-sales/_landing-module-22.scss
+++ b/scss/components/landing-sales/_landing-module-22.scss
@@ -28,12 +28,12 @@
   }
 
   @include media-breakpoint-down(lg) {
-    
-    padding: 0 0;
+    padding: 2em 0;
 
     img {
       height: 100px;
       margin-bottom: 2em;
+      margin-top: 0;
     }
 
     &::after {
