styling ipad area

--- a/scss/components/landing-sales/_landing-module-13.scss
+++ b/scss/components/landing-sales/_landing-module-13.scss
@@ -11,15 +11,19 @@
   .img-asap {
       position: absolute;
       z-index: 9999;
-      width: 238px;
+      width: 340px;
       height: 399px;
-      top: -260px;
-      right: 20px;
+      top: -290px;
+      right: 10px;
     }
 
   h2 {
     font-weight: 600;
     margin-bottom: .5em;
+    font-size: 24px;
+    letter-spacing: 1px;
+    line-height: 1.5;
+    margin-bottom: 1em;
   } 
 
   .blue {
@@ -58,13 +62,14 @@
   }
 
   .dark-gray h2 {
-    font-size: 27px;
+    font-size: 24px;
     letter-spacing: 1px;
     line-height: 1.5;
+    margin-bottom: 1em;
   }
 
   p {
-    font-size: 20px;
+    font-size: 15px;
     margin-bottom: 2em;
 
     .red {
@@ -73,7 +78,7 @@
   }
 
   p.blurb {
-    font-size: 33px;
+    font-size: 30px;
     margin-bottom: 0;
     line-height: 1.5;
     margin-top: .5em;
